Fixed alignment error on project-img and added alt on all images

--- a/src/templates/project/project-imgs/index.scss
+++ b/src/templates/project/project-imgs/index.scss
@@ -50,7 +50,7 @@
                 height: 4px;
                 width: 16px;
                 position: relative;
-                top: 5px;
+                top: -7px;
                 left: -6px;
                 font-weight: 800;
                 font-family: 'Nunito', sans-serif;
